Fixed country name size and state of forecast on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@
 }
 
 .app-favorites-list {
-  max-height: 35vh;
+  max-height: 42vh;
 }
 
 @media only screen and (min-width: 768px) {
